tests/try_build/do_not_hold_ctx_through_await.stderr
error: future cannot be sent between threads safely
  --> tests/try_build/do_not_hold_ctx_through_await.rs:6:14
   |
6  |     executor.queue(move |mut input| async move {
   |              ^^^^^ future created by async block is not `Send`
   |
   = help: within `impl Future<Output = [async output]>`, the trait `Send` is not implemented for `*const u8`
note: future is not `Send` as this value is used across an await
  --> tests/try_build/do_not_hold_ctx_through_await.rs:10:43
   |
7  |         let mut inner_input = input.get();
   |             --------------- has type `CosyncInputGuard<'_, i32>` which is not `Send`
...
10 |         let sleep = cosync::sleep_ticks(1).await;
   |                                           ^^^^^^ await occurs here, with `mut inner_input` maybe used later
...
15 |     });
   |     - `mut inner_input` is later dropped here
note: required by a bound in `Cosync::<T>::queue`
  --> src/lib.rs
   |
   |         Out: Future<Output = ()> + Send,
   |                                    ^^^^ required by this bound in `Cosync::<T>::queue`
